--- a/package.json
+++ b/package.json
@@ -3,11 +3,23 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@metamask/sdk": "^0.5.6",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "@uniswap/sdk": "^3.0.3",
+    "@uniswap/sdk-core": "^4.0.6",
+    "@uniswap/v2-sdk": "^3.2.0",
+    "@uniswap/v3-sdk": "^3.10.0",
+    "bignumber.js": "^9.1.1",
+    "bootstrap": "^5.3.1",
+    "dotenv": "^16.3.1",
+    "ethers": "^6.7.0",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.8.0",
+    "react-bootstrap-icons": "^1.10.3",
     "react-dom": "^18.2.0",
+    "react-hot-toast": "^2.4.1",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
   },
